cmake_minimum_required(VERSION 3.16)
project(intern2025summer_8lessons LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(Lesson1)
add_subdirectory(Lesson2)
add_subdirectory(Lesson3)
add_subdirectory(Lesson4)
add_subdirectory(Lesson5)
add_subdirectory(Lesson6)
add_subdirectory(Lesson7)
add_subdirectory(Lesson8)
